force-app/main/default/objects/Pokemon__c/fields/Move_2__c.field-meta.xml
<CustomField>
    <fullName>Move_2__c</fullName>
    <label>Move 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>