force-app/main/default/objects/Pokemon__c/fields/Move_3__c.field-meta.xml
<CustomField>
    <fullName>Move_3__c</fullName>
    <label>Move 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>