force-app/main/default/objects/Pokemon__c/fields/SpriteURL__c.field-meta.xml
<CustomField>
    <fullName>SpriteURL__c</fullName>
    <formula>IMAGE(SpriteURLField__c,  &apos;No Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpriteURL</label>
    <type>Text</type>
</CustomField>