force-app/main/default/objects/Pokemon__c/fields/SpriteURLField__c.field-meta.xml
<CustomField>
    <fullName>SpriteURLField__c</fullName>
    <label>SpriteURLField</label>
    <length>200</length>
    <type>Text</type>
</CustomField>